feat: implement badge component

--- a/src/lightning/badge/badge.html
+++ b/src/lightning/badge/badge.html
@@ -1,5 +1,5 @@
 <template>
-    <span class="rainbow-badge rainbow-badge--brand">
+    <span class={computedClass}>
         {label}
     </span>
 </template>
