fix: footer content style

--- a/src/lightning/card/card.html
+++ b/src/lightning/card/card.html
@@ -28,9 +28,7 @@
             <slot></slot>
         </div>
         <footer class="slds-card__footer">
-            <slot name="footer">
-                <span data-id="default-content"></span>
-            </slot>
+            <slot name="footer"></slot>
         </footer>
     </article>
 </template>
