--- a/src/modules/th/card/__stories__/basic/basic.html
+++ b/src/modules/th/card/__stories__/basic/basic.html
@@ -1,6 +1,7 @@
 <template>
-  <lightning-card title="accounts">
+  <th-card title="accounts">
     <button slot="actions">New</button>
     <p style="padding: 0 1rem">Anything can go into the card body</p>
-  </lightning-card>
+    <span slot="footer">View All</span>
+  </th-card>
 </template>
