--- a/src/modules/th/card/__stories__/withoutFooter/withoutFooter.html
+++ b/src/modules/th/card/__stories__/withoutFooter/withoutFooter.html
@@ -1,7 +1,6 @@
 <template>
-  <lightning-card title="accounts">
+  <th-card title="accounts">
     <button slot="actions">New</button>
     <p style="padding: 0 1rem">Anything can go into the card body</p>
-    <span slot="footer">View All</span>
-  </lightning-card>
+  </th-card>
 </template>
